<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="co.edu.udea.compumovil.proyectocm_gr02_20181.FriendProfileFragment">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayoutUserData"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        tools:layout_editor_absoluteY="-3dp">

        <ImageView
            android:id="@+id/imgProfileUser"
            android:layout_width="111dp"
            android:layout_height="87dp"
            android:layout_marginTop="60dp"
            android:src="@drawable/ic_person_black_24dp"
            app:layout_constraintBottom_toTopOf="@+id/txtUserNameFriend"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/txtNumFriendsFriend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtNumFriends"
            android:textColor="@color/colorBlack"
            android:textSize="35dp"
            android:textStyle="italic"
            app:layout_constraintBottom_toTopOf="@+id/txtNumEventsFriend"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtUserNameFriend"
            app:layout_constraintVertical_bias="0.752" />

        <TextView
            android:id="@+id/txtNumEventsFriend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="92dp"
            android:text="@string/txtNumEvents"
            android:textColor="@color/colorBlack"
            android:textSize="35dp"
            android:textStyle="italic"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/txtUserNameFriend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtRateProfile"
            android:textColor="@color/colorBlack"
            android:textSize="45dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.386"
            tools:layout_editor_absoluteX="72dp" />

        <Button
            android:id="@+id/btnAddFriend"
            android:layout_width="153dp"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:text="@string/btnAddFriend"
            android:textSize="20dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtNumEventsFriend"
            tools:layout_editor_absoluteX="159dp"
            tools:layout_editor_absoluteY="447dp" />
    </android.support.constraint.ConstraintLayout>

</FrameLayout>
