<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="co.edu.udea.compumovil.proyectocm_gr02_20181.ProfileFragment">

    <!-- TODO: Update blank fragment layout -->

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/constraintLayoutUserData"
            android:layout_width="match_parent"
            android:layout_height="112dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.094"
            tools:layout_editor_absoluteY="-3dp">

            <ImageView
                android:id="@+id/imgProfileUser"
                android:layout_width="87dp"
                android:layout_height="70dp"
                android:src="@android:drawable/ic_menu_gallery"
                app:layout_constraintEnd_toStartOf="@+id/txtNumFriends"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="0dp" />

            <TextView
                android:id="@+id/txtNumFriends"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtNumFriends"
                android:textColor="@color/colorBlack"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/txtNumEvents"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/imgProfileUser"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="92dp"
                tools:layout_editor_absoluteY="35dp" />

            <TextView
                android:id="@+id/txtNumEvents"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtNumEvents"
                android:textColor="@color/colorBlack"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/txtRate"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/txtNumFriends"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="191dp"
                tools:layout_editor_absoluteY="51dp" />

            <TextView
                android:id="@+id/txtRate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtRateProfile"
                android:textColor="@color/colorBlack"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/txtNumEvents"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteY="25dp" />
        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/constraintLayoutEvents"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.379">

            <TextView
                android:id="@+id/txtEventsProfile"
                android:layout_width="132dp"
                android:layout_height="42dp"
                android:text="@string/txtMyEvents"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.063"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />
        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/constraintLayoutJoinEvents"
            android:layout_width="match_parent"
            android:layout_height="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayoutEvents"
            app:layout_constraintVertical_bias="0.337">

            <TextView
                android:id="@+id/txtJoinEventsProfile"
                android:layout_width="wrap_content"
                android:layout_height="22dp"
                android:text="@string/txtJoinEvents"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.064"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </android.support.constraint.ConstraintLayout>

    </android.support.constraint.ConstraintLayout>
</FrameLayout>
